@@ -1,7 +1,7 @@
 /*
  * This file is part of Espruino, a JavaScript interpreter for Microcontrollers
  *
- * Copyright (C) 2013 Gordon Williams <gw@pur3.co.uk>
+ * Copyright (C) 2024 Gordon Williams <gw@pur3.co.uk>
  *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -17,8 +17,8 @@
 #include "jswrap_font_6x15.h"
 #include "jswrap_graphics.h"
 
-// Generated from HaxorNarrow-15.bdf at https://github.com/Tecate/bitmap-fonts with tweaks by Gordon Williams for ISO8859-1 support
-// -ucw.cz-Haxor-Narrow-R-Normal--15-120-72-72-M-72-iso8859-2// BOUNDINGBOX 8 17 0 -3// _ASCENT 13// _DESCENT 3
+// Generated from HaxorNarrow-15.bdf at https://github.com/Tecate/bitmap-fonts with tweaks by Gordon for ISO8859-1
+// -ucw.cz-Haxor-Narrow-R-Normal--15-120-72-72-M-72-iso8859-1// BOUNDINGBOX 14 17 -1 -3// _ASCENT 13// _DESCENT 3
 // Charset iso8859
 
 
@@ -91,49 +91,50 @@ static const unsigned char fontBitmap[] = {
 4, 128, 6, 0, 0, 0, 46, 0, 84, 0, 72, 0, 0, 2, 160, 5, 
 64, 5, 0, 0, 0, 16, 0, 64, 0, 0, 0, 7, 250, 49, 2, 130, 
 0, 196, 0, 127, 128, 0, 1, 254, 12, 64, 160, 130, 49, 0, 31, 224, 
-0, 0, 127, 147, 16, 72, 32, 76, 64, 7, 248, 0, 0, 31, 232, 196, 
+0, 0, 127, 147, 16, 72, 32, 76, 64, 7, 248, 0, 2, 31, 232, 196, 
 10, 8, 35, 16, 1, 254, 0, 0, 15, 242, 98, 1, 4, 9, 136, 0, 
-255, 0, 0, 1, 254, 76, 65, 96, 129, 49, 0, 31, 224, 0, 1, 255, 
-4, 1, 40, 2, 144, 4, 16, 16, 0, 3, 254, 8, 2, 80, 6, 160, 
-10, 32, 32, 0, 0, 31, 242, 64, 18, 128, 41, 0, 65, 1, 0, 0, 
-15, 254, 16, 132, 161, 10, 66, 16, 128, 32, 0, 31, 252, 33, 10, 66, 
-26, 132, 37, 0, 64, 0, 1, 255, 202, 16, 132, 33, 40, 66, 16, 4, 
-0, 1, 32, 9, 127, 240, 128, 32, 0, 2, 0, 151, 255, 72, 2, 0, 
-0, 160, 10, 127, 242, 128, 32, 0, 20, 1, 15, 254, 80, 4, 0, 1, 
-255, 194, 16, 132, 33, 4, 4, 7, 240, 0, 0, 15, 254, 12, 0, 134, 
-2, 3, 0, 255, 224, 0, 3, 255, 163, 0, 33, 128, 128, 192, 63, 248, 
-0, 0, 127, 193, 0, 74, 0, 164, 1, 7, 252, 0, 0, 31, 241, 64, 
-20, 128, 37, 0, 65, 255, 0, 0, 7, 252, 80, 5, 32, 9, 64, 20, 
-127, 192, 0, 3, 254, 40, 2, 16, 4, 160, 8, 63, 224, 0, 2, 16, 
-2, 64, 3, 0, 6, 0, 18, 0, 66, 0, 0, 0, 127, 244, 132, 5, 
-8, 18, 28, 3, 199, 0, 0, 31, 248, 128, 10, 128, 18, 0, 33, 255, 
-128, 0, 7, 254, 0, 2, 64, 5, 0, 8, 127, 224, 0, 1, 255, 136, 
-0, 160, 1, 32, 2, 159, 248, 0, 0, 255, 196, 0, 64, 0, 144, 1, 
-15, 252, 0, 0, 28, 0, 6, 1, 3, 244, 24, 1, 192, 0, 0, 32, 
-0, 64, 2, 255, 249, 0, 2, 0, 0, 0, 7, 254, 16, 0, 34, 8, 
-68, 16, 116, 32, 7, 128, 0, 0, 255, 0, 128, 10, 0, 36, 0, 4, 
-0, 0, 0, 19, 128, 72, 130, 145, 9, 36, 1, 252, 0, 0, 4, 224, 
-82, 33, 36, 65, 73, 0, 127, 0, 0, 1, 56, 36, 136, 41, 16, 146, 
-64, 31, 192, 0, 0, 78, 5, 34, 2, 68, 20, 144, 7, 240, 0, 0, 
-9, 193, 36, 69, 72, 132, 146, 0, 254, 0, 0, 4, 224, 18, 32, 36, 
-64, 63, 0, 145, 1, 34, 1, 200, 0, 0, 7, 224, 16, 32, 32, 112, 
-64, 144, 66, 0, 0, 1, 248, 36, 8, 40, 16, 144, 32, 16, 128, 0, 
-0, 126, 1, 34, 10, 68, 36, 136, 7, 32, 0, 0, 31, 128, 72, 128, 
-145, 193, 34, 65, 200, 0, 0, 7, 224, 82, 32, 36, 65, 72, 128, 114, 
-0, 0, 1, 248, 36, 136, 41, 16, 146, 32, 28, 128, 0, 0, 1, 1, 
-2, 11, 252, 32, 8, 0, 16, 0, 0, 0, 65, 64, 132, 255, 4, 2, 
-0, 4, 0, 0, 3, 248, 8, 8, 16, 16, 16, 69, 255, 204, 0, 0, 
-0, 3, 240, 8, 16, 16, 32, 144, 131, 255, 130, 0, 0, 0, 3, 252, 
-2, 0, 40, 0, 144, 0, 31, 192, 0, 0, 255, 8, 128, 10, 0, 36, 
-0, 7, 240, 0, 0, 31, 128, 64, 130, 129, 9, 2, 1, 248, 0, 0, 
-7, 224, 80, 33, 32, 65, 64, 128, 126, 0, 0, 1, 248, 20, 8, 72, 
-16, 80, 33, 31, 128, 0, 0, 126, 5, 2, 2, 4, 20, 8, 7, 224, 
-0, 0, 8, 0, 16, 1, 172, 3, 88, 0, 128, 1, 0, 0, 0, 31, 
-225, 16, 1, 64, 4, 128, 0, 128, 0, 0, 3, 248, 32, 8, 160, 16, 
-128, 64, 63, 192, 0, 1, 252, 0, 4, 16, 8, 64, 32, 31, 224, 0, 
-0, 127, 2, 1, 8, 2, 8, 8, 39, 248, 0, 0, 31, 192, 128, 64, 
-0, 130, 2, 1, 254, 0, 0, 7, 131, 0, 216, 64, 65, 3, 0, 120, 
-0, 0, 1, 0, 31, 248, 4, 9, 8, 28, 16, 32, 0, 0, 
+255, 0, 0, 1, 254, 76, 65, 96, 129, 49, 0, 31, 224, 0, 15, 252, 
+32, 128, 65, 0, 255, 225, 8, 66, 16, 128, 0, 7, 252, 16, 4, 160, 
+13, 64, 20, 64, 64, 0, 0, 127, 244, 132, 37, 8, 66, 16, 132, 1, 
+0, 0, 31, 252, 33, 9, 66, 20, 132, 33, 0, 64, 0, 7, 255, 40, 
+66, 144, 132, 161, 8, 64, 16, 0, 3, 255, 148, 33, 8, 66, 80, 132, 
+32, 8, 0, 2, 64, 18, 255, 225, 0, 64, 0, 4, 1, 47, 254, 144, 
+4, 0, 1, 64, 20, 255, 229, 0, 64, 0, 40, 2, 31, 252, 160, 8, 
+0, 3, 255, 132, 33, 8, 66, 8, 8, 15, 224, 0, 0, 95, 253, 24, 
+1, 12, 4, 6, 1, 255, 192, 0, 3, 254, 72, 2, 80, 4, 32, 8, 
+63, 224, 0, 0, 255, 130, 0, 148, 1, 72, 2, 15, 248, 0, 0, 63, 
+226, 128, 41, 0, 74, 0, 131, 254, 0, 0, 15, 248, 160, 10, 64, 18, 
+128, 40, 255, 128, 0, 7, 252, 80, 4, 32, 9, 64, 16, 127, 192, 0, 
+4, 32, 4, 128, 6, 0, 12, 0, 36, 0, 132, 0, 0, 1, 255, 4, 
+28, 9, 200, 28, 16, 127, 192, 0, 0, 63, 241, 0, 21, 0, 36, 0, 
+67, 255, 0, 0, 15, 252, 0, 4, 128, 10, 0, 16, 255, 192, 0, 3, 
+255, 16, 1, 64, 2, 64, 5, 63, 240, 0, 1, 255, 136, 0, 128, 1, 
+32, 2, 31, 248, 0, 0, 56, 0, 12, 2, 7, 232, 48, 3, 128, 0, 
+0, 127, 252, 32, 64, 64, 128, 129, 0, 252, 0, 0, 15, 252, 32, 0, 
+68, 16, 136, 32, 232, 64, 15, 0, 0, 0, 156, 18, 68, 20, 136, 9, 
+32, 15, 224, 0, 0, 39, 0, 145, 5, 34, 18, 72, 3, 248, 0, 0, 
+9, 192, 164, 66, 72, 130, 146, 0, 254, 0, 0, 18, 112, 73, 16, 82, 
+33, 36, 128, 63, 128, 0, 0, 156, 10, 68, 4, 136, 41, 32, 15, 224, 
+0, 0, 19, 130, 72, 138, 145, 9, 36, 1, 252, 0, 0, 9, 192, 36, 
+64, 72, 128, 126, 1, 34, 2, 68, 3, 144, 0, 0, 15, 192, 32, 64, 
+64, 224, 129, 32, 132, 0, 0, 3, 240, 73, 16, 82, 32, 36, 64, 57, 
+0, 0, 0, 252, 2, 68, 20, 136, 73, 16, 14, 64, 0, 0, 63, 2, 
+145, 9, 34, 10, 68, 3, 144, 0, 0, 15, 192, 164, 64, 72, 130, 145, 
+0, 228, 0, 0, 0, 8, 72, 16, 95, 224, 0, 64, 0, 128, 0, 0, 
+2, 2, 4, 23, 248, 64, 16, 0, 32, 0, 0, 0, 130, 129, 9, 254, 
+8, 4, 0, 8, 0, 0, 0, 32, 160, 64, 127, 130, 1, 0, 2, 0, 
+0, 1, 248, 84, 8, 168, 16, 208, 33, 127, 128, 0, 5, 254, 17, 0, 
+20, 0, 72, 0, 15, 224, 0, 0, 63, 4, 129, 9, 2, 10, 4, 3, 
+240, 0, 0, 15, 192, 32, 65, 64, 132, 129, 0, 252, 0, 0, 3, 240, 
+40, 16, 144, 32, 160, 64, 63, 0, 0, 0, 252, 10, 4, 36, 8, 40, 
+16, 143, 192, 0, 0, 63, 2, 129, 1, 2, 10, 4, 3, 240, 0, 0, 
+4, 0, 8, 0, 214, 1, 172, 0, 64, 0, 128, 0, 0, 0, 16, 7, 
+192, 17, 64, 36, 128, 81, 0, 124, 1, 0, 0, 0, 15, 224, 128, 32, 
+128, 64, 1, 0, 255, 0, 0, 3, 248, 0, 8, 32, 16, 128, 64, 63, 
+192, 0, 0, 254, 4, 2, 16, 4, 16, 16, 15, 240, 0, 0, 63, 129, 
+0, 128, 1, 4, 4, 3, 252, 0, 0, 15, 6, 1, 176, 128, 130, 6, 
+0, 240, 0, 0, 31, 252, 4, 64, 8, 128, 14, 0, 0, 0, 120, 50, 
+13, 128, 4, 8, 48, 7, 128, 0, 0, 
 };
 
 static const unsigned char fontWidths[] = { 
@@ -147,10 +148,11 @@ static const unsigned char fontWidths[] = {
 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 
 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 
 5, 0, 4, 4, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 
-6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 4, 4, 4, 4, 
+6, 6, 6, 6, 6, 6, 7, 6, 6, 6, 6, 6, 4, 4, 4, 4, 
 6, 6, 6, 6, 6, 6, 6, 7, 6, 6, 6, 6, 6, 6, 6, 7, 
-6, 6, 6, 6, 6, 6, 8, 6, 6, 6, 6, 6, 6, 6, 6, 7, 
-7, 6, 6, 6, 6, 6, 6, 7, 6, 6, 6, 6, 6, 6, 6, 
+6, 6, 6, 6, 6, 6, 8, 6, 6, 6, 6, 6, 6, 6, 6, 6, 
+6, 6, 6, 6, 6, 6, 6, 7, 8, 6, 6, 6, 6, 6, 5, 6, 
+
 };
 
 
@@ -160,7 +162,7 @@ static const unsigned char fontWidths[] = {
   "name" : "setFont6x15",
   "generate" : "jswrap_graphics_setFont6x15",
   "params" : [
-    ["scale","int","[optional] If >1 the font will be scaled up by that amount"]
+    ["scale","int","(optional) If >1 the font will be scaled up by that amount"]
   ],
   "return" : ["JsVar","The instance of Graphics this was called on, to allow call chaining"],
   "return_object" : "Graphics"
