@@ -17,6 +17,7 @@
             E.toJSON now uses `.toJSON` function if available on object
             Puck.js/Jolt.js: ensure self-test keeps re-running at boot unless it has passed
             Bangle.js: Locale currency deprecated, 'number' updated to BangleApps version with thousands separator, date now doesn't sometimes have trailing spaces
+            Bangle.js: 6x15 font tweaks for ISO8859-1
 
      2v21 : nRF52: free up 800b more flash by removing vector table padding
             Throw Exception when a Promise tries to resolve with another Promise (#2450)
